# code

./: .env.example  .gitignore  README.md  pyproject.toml
.code_cli/: config.json
src/code_cli/: __init__.py  client.py  config.py  context.py  main.py  models.py  permissions.py  plugin_system.py  registry.py
src/code_cli/commands/: __init__.py  base.py  commit.py  help.py  model.py
src/code_cli/interfaces/: __init__.py  base.py  output.py  telegram.py  terminal.py
src/code_cli/mcp/: __init__.py  client.py
src/code_cli/tools/: __init__.py  base.py  bash.py  create_directory.py  directory_tree.py  edit.py  file_info.py  glob.py  grep.py  list_directory.py  move_file.py  read.py  web_fetch.py  web_search.py  write.py
